--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App p {
   text-align: center;
 }
+
+.listOfCountries li {
+  list-style-type: none;
+  padding: 1em;
+  border: 1px solid lightgray;
+}
+
+main {
+  display: flex;
+}
