finished lab - made code simipler

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,12 @@
 .padding {
   padding: 0 50px;
 }
+
+.col-4 {
+  position: fixed !important;
+  right: 0 !important;
+}
+
+.col-8 {
+  margin-left: 0 !important;
+}
