--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
 .App p {
   text-align: center;
 }
+
+.App {
+  margin: 5% 10%;
+}
+
+.countryDetail {
+  margin-left: 15%;
+  border: 1px solid black;
+  margin-top: 50px;
+  border-radius: 5%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  position: sticky;
+}
+
+.countryList {
+  text-decoration: none;
+  color: black;
+}
